--- a/angularapp/src/app/login/login.component.html
+++ b/angularapp/src/app/login/login.component.html
@@ -4,18 +4,16 @@
 
 <form>
     <div class="mb-3">
-      <input type="email" class="form-control1" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="    Email">
+      <input type="email" class="form-control1" id="email" aria-describedby="emailHelp" placeholder="    Email">
     </div>
     <div class="mb-3">
-      <input type="password" class="form-control2" id="exampleInputPassword1" placeholder="    Password">
+      <input type="password" class="form-control2" id="password" placeholder="    Password">
     </div>
-    <button type="login" class="btn btn-primary" routerLink="/admin">LOGIN</button>
+    <button type="login" class="btn btn-primary" id="submitButton" routerLink="/admin">LOGIN</button>
     <div class="new">
-        New to Bookstore? <a class="link1" href="/signup"><span>Click here</span></a>
+        New to Bookstore? <a class="link1" id="signupLink" href="/signup"><span>Click here</span></a>
     <button type="login" class="btn btn-primary" routerLink="/home">LOGIN</button>
-    <div class="new">
-        New to Bookstore? <a class="link1" routerLink="/signup"><span>Click here</span></a>
-    </div>
+  </div>
   </form>
 
 </div>
