--- a/angularapp/src/app/signup/signup.component.html
+++ b/angularapp/src/app/signup/signup.component.html
@@ -4,27 +4,28 @@
 
 <form>
     <div class="mb-3">
-      <input type="email" class="form-control1" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="   Enter Email">
+      <input type="email" class="form-control1" id="email" placeholder="   Enter Email">
     </div>
-    <div class="mb-3">
-      <input type="password" class="form-control2" id="exampleInputPassword1" placeholder="   Password">
+  <div class="mb-3">
+      <input type="email" class="form-control1" id="user" placeholder="   Username">
     </div>
+    
     <div class="mb-3">
-        <input type="password" class="form-control3" id="exampleInputMobilenumber1" placeholder="   Enter Mobile Number">
+        <input type="password" class="form-control3" id="mobilenumber" placeholder="   Enter Mobile Number">
       </div>
       <div class="mb-3">
-        <input type="password" class="form-control4" id="exampleInputEPassword" placeholder="  Enter Password">
+        <input type="password" class="form-control4" id="password" placeholder="  Enter Password">
       </div>
       <div class="mb-3">
-        <input type="password" class="form-control5" id="exampleInputCPassword" placeholder="   Confirm Password">
+        <input type="password" class="form-control5" id="confirmpassword" placeholder="   Confirm Password">
       </div>
-    <button type="login" class="btn btn-primary" routerLink="/admin">LOGIN</button>
+    <button type="login" class="btn btn-primary" id="submitButton" routerLink="/admin">LOGIN</button>
     <button type="login" class="btn btn-primary">LOGIN</button>
     <div class="new">
-        Already a member? <a class="link2" routerLink="/login"><span>Click here</span></a>
+        Already a member? <a class="link2" routerLink="/login" id="signinLink"><span>Click here</span></a>
     </div>
   </form>
-  </div>
+</div>
   <div class="container2">
     <img class="img2" src="../../assets/sign.png " >
   </div>
