--- a/angularapp/src/app/signup/signup.component.html
+++ b/angularapp/src/app/signup/signup.component.html
@@ -7,7 +7,7 @@
       <input type="email" class="form-control1" id="email" placeholder="   Enter Email">
     </div>
   <div class="mb-3">
-      <input type="email" class="form-control1" id="user" placeholder="   Username">
+      <input type="email" class="form-control1" id="username" placeholder="   Username">
     </div>
     
     <div class="mb-3">
